test/sema/negative/impl_bounds.output
impl_bounds.impala:6 col 5 - 14: error: 'i32' (instance for 'D') does not implement bound 'T[i32]'
